<resources>
    <string name="app_name">JW Player VR Sample</string>
    <string name="select_video">Select video</string>
    <string name="monoscopic">Monoscopic</string>
    <string name="stereoscopic_over_under">Stereoscopic (Over-under)</string>
    <string name="stereoscopic_side_by_side">Stereoscopic (Side-by-side)</string>
    <string name="recently_watched">Recently watched (tap to select)</string>
    <string name="watch">Watch</string>
    <string name="enter_stream_url">Enter stream URL</string>
    <string name="instructions">Tap the screen to toggle playback.\nTap the Cardboard icon to enter VR mode.</string>
    <string name="no_video_selected">No video selected!</string>
</resources>
